Search available vehicles between dates